--- a/CocosBuilder/ccBuilder/SequencerScaleWindow.xib
+++ b/CocosBuilder/ccBuilder/SequencerScaleWindow.xib
@@ -55,16 +55,15 @@
 						<object class="NSTextField" id="333136524">
 							<reference key="NSNextResponder" ref="1006"/>
 							<int key="NSvFlags">268</int>
-							<string key="NSFrame">{{17, 51}, {89, 17}}</string>
+							<string key="NSFrame">{{17, 51}, {81, 17}}</string>
 							<reference key="NSSuperview" ref="1006"/>
-							<reference key="NSWindow"/>
 							<reference key="NSNextKeyView" ref="306462116"/>
 							<string key="NSReuseIdentifierKey">_NS:1505</string>
 							<bool key="NSEnabled">YES</bool>
 							<object class="NSTextFieldCell" key="NSCell" id="164605700">
 								<int key="NSCellFlags">68157504</int>
 								<int key="NSCellFlags2">71304192</int>
-								<string key="NSContents">Strech factor:</string>
+								<string key="NSContents">Scale factor:</string>
 								<object class="NSFont" key="NSSupport" id="652308199">
 									<string key="NSName">LucidaGrande</string>
 									<double key="NSSize">13</double>
@@ -98,7 +97,6 @@
 							<int key="NSvFlags">268</int>
 							<string key="NSFrame">{{120, 14}, {73, 32}}</string>
 							<reference key="NSSuperview" ref="1006"/>
-							<reference key="NSWindow"/>
 							<string key="NSReuseIdentifierKey">_NS:9</string>
 							<bool key="NSEnabled">YES</bool>
 							<object class="NSButtonCell" key="NSCell" id="132295949">
@@ -120,9 +118,8 @@
 						<object class="NSTextField" id="306462116">
 							<reference key="NSNextResponder" ref="1006"/>
 							<int key="NSvFlags">268</int>
-							<string key="NSFrame">{{111, 47}, {76, 22}}</string>
+							<string key="NSFrame">{{103, 47}, {84, 22}}</string>
 							<reference key="NSSuperview" ref="1006"/>
-							<reference key="NSWindow"/>
 							<reference key="NSNextKeyView" ref="963385597"/>
 							<string key="NSReuseIdentifierKey">_NS:9</string>
 							<bool key="NSEnabled">YES</bool>
@@ -137,18 +134,20 @@
 										<object class="NSLocale" key="locale">
 											<string key="NS.identifier"/>
 										</object>
-										<real value="10" key="maximum"/>
+										<integer value="50" key="maximum"/>
 										<integer value="2" key="maximumFractionDigits"/>
+										<integer value="3" key="maximumIntegerDigits"/>
 										<real value="0.0" key="minimum"/>
 										<integer value="2" key="minimumFractionDigits"/>
+										<integer value="0" key="minimumIntegerDigits"/>
 										<string key="negativeInfinitySymbol">-∞</string>
 										<string key="nilSymbol">L!indyH@p</string>
 										<integer value="1" key="numberStyle"/>
 										<string key="positiveInfinitySymbol">+∞</string>
 										<boolean value="NO" key="usesGroupingSeparator"/>
 									</dictionary>
-									<string key="NS.positiveformat">#0.00</string>
-									<string key="NS.negativeformat">#0.00</string>
+									<string key="NS.positiveformat">#.00</string>
+									<string key="NS.negativeformat">#.00</string>
 									<nil key="NS.positiveattrs"/>
 									<nil key="NS.negativeattrs"/>
 									<nil key="NS.zero"/>
@@ -161,7 +160,7 @@
 										<reference key="NSAttributes" ref="912572701"/>
 									</object>
 									<real value="0.0" key="NS.min"/>
-									<real value="10" key="NS.max"/>
+									<integer value="50" key="NS.max"/>
 									<object class="NSDecimalNumberHandler" key="NS.rounding">
 										<int key="NS.roundingmode">3</int>
 										<bool key="NS.raise.overflow">YES</bool>
@@ -200,7 +199,6 @@
 							<int key="NSvFlags">268</int>
 							<string key="NSFrame">{{45, 14}, {75, 32}}</string>
 							<reference key="NSSuperview" ref="1006"/>
-							<reference key="NSWindow"/>
 							<reference key="NSNextKeyView" ref="651703696"/>
 							<string key="NSReuseIdentifierKey">_NS:9</string>
 							<bool key="NSEnabled">YES</bool>
@@ -223,7 +221,6 @@
 					</array>
 					<string key="NSFrameSize">{207, 88}</string>
 					<reference key="NSSuperview"/>
-					<reference key="NSWindow"/>
 					<reference key="NSNextKeyView" ref="333136524"/>
 				</object>
 				<string key="NSScreenRect">{{0, 0}, {1440, 878}}</string>
@@ -654,48 +651,7 @@
 			<nil key="sourceID"/>
 			<int key="maxID">107</int>
 		</object>
-		<object class="IBClassDescriber" key="IBDocument.Classes">
-			<array class="NSMutableArray" key="referencedPartialClassDescriptions">
-				<object class="IBPartialClassDescription">
-					<string key="className">CCBModalSheetController</string>
-					<string key="superclassName">NSWindowController</string>
-					<dictionary class="NSMutableDictionary" key="actions">
-						<string key="acceptSheet:">id</string>
-						<string key="cancelSheet:">id</string>
-					</dictionary>
-					<dictionary class="NSMutableDictionary" key="actionInfosByName">
-						<object class="IBActionInfo" key="acceptSheet:">
-							<string key="name">acceptSheet:</string>
-							<string key="candidateClassName">id</string>
-						</object>
-						<object class="IBActionInfo" key="cancelSheet:">
-							<string key="name">cancelSheet:</string>
-							<string key="candidateClassName">id</string>
-						</object>
-					</dictionary>
-					<object class="IBClassDescriptionSource" key="sourceIdentifier">
-						<string key="majorKey">IBProjectSource</string>
-						<string key="minorKey">./Classes/CCBModalSheetController.h</string>
-					</object>
-				</object>
-				<object class="IBPartialClassDescription">
-					<string key="className">NSLayoutConstraint</string>
-					<string key="superclassName">NSObject</string>
-					<object class="IBClassDescriptionSource" key="sourceIdentifier">
-						<string key="majorKey">IBProjectSource</string>
-						<string key="minorKey">./Classes/NSLayoutConstraint.h</string>
-					</object>
-				</object>
-				<object class="IBPartialClassDescription">
-					<string key="className">SequencerStretchWindow</string>
-					<string key="superclassName">CCBModalSheetController</string>
-					<object class="IBClassDescriptionSource" key="sourceIdentifier">
-						<string key="majorKey">IBProjectSource</string>
-						<string key="minorKey">./Classes/SequencerStretchWindow.h</string>
-					</object>
-				</object>
-			</array>
-		</object>
+		<object class="IBClassDescriber" key="IBDocument.Classes"/>
 		<int key="IBDocument.localizationMode">0</int>
 		<string key="IBDocument.TargetRuntimeIdentifier">IBCocoaFramework</string>
 		<bool key="IBDocument.PluginDeclaredDependenciesTrackSystemTargetVersion">YES</bool>
